# visionflow

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  conftest.py  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py
apps/api/app/dependencies/: auth.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/routers/: annotations.py  images.py  projects.py
apps/api/app/services/: storage.py
apps/api/tests/: test_main.py
apps/web/: .env.example  .eslintrc.json  Dockerfile.dev  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/__tests__/: index.test.tsx
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/projects/[projectId]/annotate/: page.tsx
apps/web/src/app/(auth)/auth/callback/: route.ts
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/components/annotation/: AnnotationCanvas.tsx  AnnotationToolbar.tsx  ClassSelector.tsx
apps/web/src/utils/supabase/: server.ts
apps/workers/: .env.example  Dockerfile  conftest.py  requirements.txt
apps/workers/app/: __init__.py  main.py
apps/workers/app/core/: config.py
apps/workers/app/tasks/: augmentation.py
apps/workers/tests/: test_augmentation.py
supabase/: config.toml
supabase/migrations/: 20240101000000_initial_schema.sql  20240101000001_rls_policies.sql
