[project]
name = "visionflow-api"
version = "1.0.0"
description = "VisionFlow FastAPI Backend"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
